[project]
name = "botclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Lynch", email = "m.lynch@sydney.edu.au" }
]
requires-python = ">=3.9"
dependencies = [
    "mastodon-py>=2.0.0",
    "pystache>=0.6.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
